corrected the icons in pages

--- a/html_Files/Listing.html
+++ b/html_Files/Listing.html
@@ -43,41 +43,41 @@
         <div class="dk-menu">
             <ul>
                 <li>
-                  <a href="CreateListing.html">Create</a>
+                    <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
-                  <a class="ViewListing">View listings</a>
+                    <a class="ViewListing">View listings</a>
                 </li>
                 <li>
-                  <a href="AboutUs.html">About Us</a>
+                    <a href="AboutUs.html">About Us</a>
                 </li>
                 <li>
-                  <a href="#" id="dk-ShowNotificationPopUp">
-                    <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
-                  </a>
+                    <a href="#" id="dk-ShowNotificationPopUp">
+                        <img id="dk_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
+                    </a>
                 </li>
                 <li>
-                  <a href="#" class="ProfileIcon">
-                    <i title="Profile" class="far fa-user-circle"></i>
-                  </a>
-                  <div id="ProfileContainer">
-                    <div class="subProfileMenu">
-                      <ul>
-                        <li>
-                          <p class="dk-WelcomeUser">Hello, <span class="loggedUserName"></span></p>
-                        </li>
-        
-                        <li>
-                          <a href="UpdateProfile.html">Profile</a>
-                        </li>
-                        <li>
-                          <a id="logoutBtn">Logout</a>
-                        </li>
-                      </ul>
+                    <a href="#" class="ProfileIcon">
+                        <i title="Profile" class="far fa-user-circle"></i>
+                    </a>
+                    <div id="ProfileContainer">
+                        <div class="subProfileMenu">
+                            <ul>
+                                <li>
+                                    <p class="dk-WelcomeUser">Hello, <span class="loggedUserName"></span></p>
+                                </li>
+
+                                <li>
+                                    <a href="UpdateProfile.html">Profile</a>
+                                </li>
+                                <li>
+                                    <a class="logoutBtn">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                  </div>
                 </li>
-              </ul>
+            </ul>
         </div>
     </header>
 
@@ -86,23 +86,31 @@
         <ul>
             <!-- Add Links to the Pages when created -->
             <li>
-                <a href="index.html"><i class="fas fa-home"></i> Home</a>
+                <a href="index.html"><span class="iconify" data-icon="ant-design:home-outlined"
+                        style="font-size: 20px;"></span>
+                    Home</a>
             </li>
             <li>
-                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create</a>
+                <a href="CreateListing.html"><span class="iconify" data-icon="fluent:text-bullet-list-add-20-regular"
+                        style="font-size: 20px;"></span>Create</a>
             </li>
             <li>
-                <a class="ViewListing"><i class="fas fa-eye"></i> View Listing</a>
+                <a class="ViewListing"> <span class="iconify" data-icon="carbon:data-view"
+                        style="font-size: 20px;"></span>View
+                    Listing</a>
             </li>
             <li>
-                <a href="AboutUs.html"><i class="fa fa-users" aria-hidden="true"></i> About Us</a>
+                <a href="AboutUs.html"> <span class="iconify" data-icon="clarity:users-line"
+                        style="font-size: 20px;"></span></span>About Us</a>
             </li>
             <li>
                 <a href="UpdateProfile.html">
-                    <i class="fa fa-user" aria-hidden="true"></i> Profile</a>
+                    <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span>
+                    Profile</a>
             </li>
             <li>
-                <a href="Login.html"><strong><i class="fas fa-eye"></i> Logout?</strong></a>
+                <a class="logoutBtn" href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line"
+                            style="font-size: 20px;"></span> Logout?</strong></a>
             </li>
         </ul>
     </nav>
