--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -95,7 +95,7 @@
                   <a href="UpdateProfile.html">Profile</a>
                 </li>
                 <li>
-                  <a id="logoutBtn">Logout</a>
+                  <a class="logoutBtn">Logout</a>
                 </li>
               </ul>
             </div>
@@ -131,7 +131,7 @@
           Profile</a>
       </li>
       <li>
-        <a href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line"
+        <a class="logoutBtn" href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line"
               style="font-size: 20px;"></span> Logout?</strong></a>
       </li>
     </ul>
