--- a/html_Files/Listing.html
+++ b/html_Files/Listing.html
@@ -37,7 +37,7 @@
                 <img id="mb_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
-                <i title="Show Menu" class="fas fa-bars"></i>
+                <span class="iconify" data-icon="charm:menu-hamburger" style="font-size: 25px;"></span>
             </a>
         </div>
         <div class="dk-menu">
@@ -177,6 +177,7 @@
     </footer>
 
     <script type="text/javascript" src="../js/script.js" defer></script>
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <script type="text/javascript" src="../js/listing_script.js" defer></script>
 </body>
 
