--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -61,7 +61,7 @@
         <img id="mb_NotificationGenie" src="../img/Notification_Genie.png" alt="Notification Genie">
       </a>
       <a href="#" id="ShowMenu">
-        <i title="Show Menu" class="fas fa-bars"></i>
+        <span class="iconify" data-icon="charm:menu-hamburger" style="font-size: 25px;"></span>
       </a>
     </div>
     <div class="dk-menu">
