--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -17,7 +17,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <script>
+  <!-- <script>
     // does the browser support service workers?
     if ('serviceWorker' in navigator) {
       // fires when the service worker is ready
@@ -41,7 +41,7 @@
       // happens when the app isn't served over a TLS connection (HTTPS)
       console.warn('Service Worker not available');
     }
-  </script>
+  </script> -->
 </head>
 
 <body>
