nav bar changes made

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -110,29 +110,29 @@
     <ul>
       <!-- Add Links to the Pages when created -->
       <li>
-        <a href="index.html"><span class="iconify" data-icon="ant-design:home-outlined" style="font-size: 20px;"></span>
-          Home</a>
+        <a  href="index.html"><span class="iconify" data-icon="ant-design:home-outlined" style="font-size: 20px;"></span>
+          </a><p class="mb-menu-text">Home</p>
       </li>
       <li>
         <a href="CreateListing.html"><span class="iconify" data-icon="fluent:text-bullet-list-add-20-regular"
-            style="font-size: 20px;"></span>Create</a>
+            style="font-size: 20px;"></span></a><p class="mb-menu-text">Create</p>
       </li>
       <li>
-        <a class="ViewListing"> <span class="iconify" data-icon="carbon:data-view" style="font-size: 20px;"></span>View
-          Listing</a>
+        <a class="ViewListing"> <span class="iconify" data-icon="carbon:data-view" style="font-size: 20px;"></span></a><p class="mb-menu-text">View
+          Listing</p>
       </li>
       <li>
         <a href="AboutUs.html"> <span class="iconify" data-icon="clarity:users-line"
-            style="font-size: 20px;"></span></span>About Us</a>
+            style="font-size: 20px;"></span></span></a><p class="mb-menu-text">About Us</p>
       </li>
       <li>
         <a href="UpdateProfile.html">
-          <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span>
-          Profile</a>
+          <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span></a>
+          <p class="mb-menu-text" >Profile</p>
       </li>
       <li>
         <a class="logoutBtn" href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line"
-              style="font-size: 20px;"></span> Logout?</strong></a>
+              style="font-size: 20px;"></span> </a><p class="mb-menu-text">Logout?</p></strong>
       </li>
     </ul>
   </nav>
