--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -78,34 +78,53 @@
     <!-- <div class="mb-nav_wrapper"></div> -->
     <nav class="mb-menu" id="showHideMenu">
         <ul>
-          <!-- Add Links to the Pages when created -->
-          <li>
-            <a  href="index.html"><span class="iconify" data-icon="ant-design:home-outlined" style="font-size: 20px;"></span>
-              </a><p class="mb-menu-text">Home</p>
-          </li>
-          <li>
-            <a href="CreateListing.html"><span class="iconify" data-icon="fluent:text-bullet-list-add-20-regular"
-                style="font-size: 20px;"></span></a><p class="mb-menu-text">Create</p>
-          </li>
-          <li>
-            <a class="ViewListing"> <span class="iconify" data-icon="carbon:data-view" style="font-size: 20px;"></span></a><p class="mb-menu-text">View
-              Listing</p>
-          </li>
-          <li>
-            <a href="AboutUs.html"> <span class="iconify" data-icon="clarity:users-line"
-                style="font-size: 20px;"></span></span></a><p class="mb-menu-text">About Us</p>
-          </li>
-          <li>
-            <a href="UpdateProfile.html">
-              <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span></a>
-              <p class="mb-menu-text" >Profile</p>
-          </li>
-          <li>
-            <a class="logoutBtn" href="Login.html"><strong><span class="iconify" data-icon="ri:logout-circle-line"
-                  style="font-size: 20px;"></span> </a><p class="mb-menu-text">Logout?</p></strong>
-          </li>
+            <!-- Add Links to the Pages when created -->
+            <li>
+                <a class="mb-menuAnchor" href="index.html"><span class="iconify" data-icon="ant-design:home-outlined"
+                        style="font-size: 20px;"></span>
+                    <p class="mb-menu-text">Home</p>
+                </a>
+
+            </li>
+            <li>
+                <a class="mb-menuAnchor" href="CreateListing.html"><span class="iconify"
+                        data-icon="fluent:text-bullet-list-add-20-regular" style="font-size: 20px;"></span>
+                    <p class="mb-menu-text">Create</p>
+                </a>
+            </li>
+            <li>
+                <a class="ViewListing mb-menuAnchor"> <span class="iconify" data-icon="carbon:data-view"
+                        style="font-size: 20px;"></span>
+                    <p class="mb-menu-text">View
+                        Listing</p>
+                </a>
+
+            </li>
+            <li>
+                <a class="mb-menuAnchor" href="AboutUs.html"> <span class="iconify" data-icon="clarity:users-line"
+                        style="font-size: 20px;"></span></span>
+                    <p class="mb-menu-text">About Us</p>
+                </a>
+            </li>
+            <li>
+                <a class="mb-menuAnchor" href="UpdateProfile.html">
+                    <span class="iconify" data-icon="carbon:user-profile" style="font-size: 20px;"></span>
+                    <p class="mb-menu-text">Profile</p>
+                </a>
+            </li>
+            <li>
+                <a class="logoutBtn mb-menuAnchor" href="Login.html">
+                    <strong>
+                        <span class="iconify" data-icon="ri:logout-circle-line" style="font-size: 20px;">
+                        </span>
+                    </strong>
+                    <strong>
+                        <p class="mb-menu-text">Logout?</p>
+                    </strong>
+                </a>
+            </li>
         </ul>
-      </nav>
+    </nav>
 
 
     <div class="Notification_wrapper">
