Added message box to respective pages instead of alert

--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -93,8 +93,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="ViewListing mb-menuAnchor" class="ViewListing"> <span class="iconify" data-icon="carbon:data-view"
-                            style="font-size: 20px;"></span>
+                    <a class="ViewListing mb-menuAnchor" class="ViewListing"> <span class="iconify"
+                            data-icon="carbon:data-view" style="font-size: 20px;"></span>
                         <p class="mb-menu-text">View
                             Listing</p>
                     </a>
@@ -151,6 +151,18 @@
                 </div> -->
                 </div>
                 <div class="triangle"></div>
+            </div>
+        </div>
+        <div class="messageboxWrapper">
+            <div class="msgwrapper">
+                <div class="crossIconContainer">
+                    <a id="CloseMsgBox">
+                        <i class="far fa-times-circle"></i>
+                    </a>
+                </div>
+                <div class="msgContainer">
+                    <p id="yourMsg">Some Message</p>
+                </div>
             </div>
         </div>
 
