--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -21,6 +21,18 @@
 </head>
 
 <body>
+    <div class="messageboxWrapper">
+        <div class="msgwrapper">
+            <div class="crossIconContainer">
+                <a id="CloseMsgBox">
+                    <i class="far fa-times-circle"></i>
+                </a>
+            </div>
+            <div class="msgContainer">
+                <p id="yourMsg">Some Message</p>
+            </div>
+        </div>
+    </div>
     <div class="signup-grid">
         <div class="signup-desktop">
             <img src="../img/Home_Genie_Logo_Profile2.png" alt="">
