--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -140,6 +140,18 @@
             <div class="triangle"></div>
         </div>
     </div>
+    <div class="messageboxWrapper">
+        <div class="msgwrapper">
+            <div class="crossIconContainer">
+                <a id="CloseMsgBox">
+                    <i class="far fa-times-circle"></i>
+                </a>
+            </div>
+            <div class="msgContainer">
+                <p id="yourMsg">Some Message</p>
+            </div>
+        </div>
+    </div>
     <!-- Till here -->
 
     <main>
