--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -40,13 +40,14 @@
                             <canvas id="canvas"></canvas>
                         </div>
                     </div>
-                    <a id="Open_Camera">
+                    <a id="Open_Camera" onclick="myFunction()">
                         <i class="fas fa-camera"></i>
                     </a>
-                    <a href="SnapPicture" id="Stop_Camera">
+                    <a href="SnapPicture" id="Stop_Camera" onclick="myFunction()">
                         Stop
                     </a>
                     <form>
+                        <img id="default-img" src="../img/default_User.png" alt="">
                         <div class="label_input_wrapper upd-fName">
                             <label for="upd-fName">User Name </label>
                             <input type="text" id="upd-fName" name="upd-fName" placeholder="First Name" required>
