Login page correction and message box color on validation successful

--- a/html_Files/SplashScreen.html
+++ b/html_Files/SplashScreen.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="tagline">
-            <h3>YOU WISH </h3>
+            <h3>YOUR WISH, </h3>
             <h3>OUR COMMAND</h3>
         </div>
     </div>
