--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -259,6 +259,9 @@
                         </div>
                     </div>
                     <div class="MapsContainer">
+
+                        <a id="locationbtn">Allow Location</a>
+
                         <iframe id="inlineFrameExample" title="Inline Frame Example" width="100%" height="100%"
                             src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
                         </iframe>
