--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -259,12 +259,11 @@
                         </div>
                     </div>
                     <div class="MapsContainer">
-
-                        <a id="locationbtn">Allow Location</a>
-
-                        <iframe id="inlineFrameExample" title="Inline Frame Example" width="100%" height="100%"
-                            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
-                        </iframe>
+                        <a id="locationbtn">AutoFill Address</a>
+                        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0"
+                            marginwidth="0" id="liveMap"
+                            src="https://www.openstreetmap.org/export/embed.html?bbox=-52.931488%2C49.2023454582315%2C-122.931488%2C49.23486167234926&amp;layer=mapnik"
+                            style="border: 1px solid black"></iframe>
                     </div>
                 </div>
                 <div class="Create_Button">
