About us page re-styled

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -162,7 +162,7 @@
                     <div class="about-content2">
                         <h2>Our Vision</h2>
                         <p>Our vision is to esclate the home services business and to make a difference by providing low
-                            cost professional services at ones doorstep. We are focused towards providing direct
+                            cost professional services at ones door step. We are focused towards providing direct
                             services from vendor to customer without any third party charges. Our aim is to Save Time
                             and Efforts by providing bidding facility to people to get the great offers even for the
                             small scale service.</p>
@@ -172,12 +172,12 @@
                     <h2>Why Choose Us?</h2>
                     <div class="about-choose-item1">
                         <!-- <span><i class="fa-solid fa-star"></i></span> -->
-                        <span class="iconify" data-icon="akar-icons:star"></span>
+                        <span class="iconify" data-icon="bi:list-check"></span>
                         <p>List any service and get notified.</p>
                     </div>
                     <div class="about-choose-item2">
                         <!-- <span><i class="fa-solid fa-gear"></i></span> -->
-                        <span class="iconify" data-icon="bytesize:settings"></span>
+                        <span class="iconify" data-icon="clarity:cursor-hand-click-line"></span>
                         <p>Accept/ Decline offers just at one click.</p>
                     </div>
                     <div class="about-choose-item3">
@@ -187,7 +187,7 @@
                     </div>
                     <div class="about-choose-item4">
                         <!-- <span><i class="fa-solid fa-location-dot"></i></span> -->
-                        <span class="iconify" data-icon="bytesize:location"></span>
+                        <span class="iconify" data-icon="clarity:map-marker-outline-badged"></span>
                         <p>Access to real time location of the owner and the bidder.</p>
                     </div>
                 </div>
