--- a/html_Files/Login.html
+++ b/html_Files/Login.html
@@ -26,7 +26,7 @@
 
             });
             // then register our service worker
-            navigator.serviceWorker.register('.././sw.js', { scope: '/' })
+            navigator.serviceWorker.register('../sw.js', { scope: '/' })
                 .then(function (reg) {
                     // display a success message
                     console.log(`Service Worker Registration (Scope: ${reg.scope})`);
