Added some style changes

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -140,7 +140,7 @@
         </a>
       </div>
       <div class="NotificationPopUp">
-       
+
       </div>
       <div class="triangle"></div>
     </div>
@@ -167,19 +167,20 @@
       <h1>Welcome, <span class="loggedUserName"></span></h1>
     </div>
     <div class="heroImageContainer">
-      <img class="hero_Image" src="../img/HERO IMAGE-02.png" alt="Hero_Image">
+      <img class="hero_Image" src="../img/Home_Genie_Hero_Image.png" alt="Hero_Image">
     </div>
     <div class="search-bar-container">
-      <div class="Search_field_Icon_Container">
-        <input type="text" id="SearchInputField" placeholder="Search">
-      </div>
-      <span class="iconify link-icon" data-icon="bi:link" style="font-size: 30px;"></span>
+
       <select name="categories" id="categories">
         <option value="personal-care-services">Personal Care Services</option>
         <option value="indoor-services">Indoor Services</option>
         <option value="outdoor-services">Outdoor Services</option>
         <option value="premium-services">Premium Services</option>
       </select>
+      <span class="iconify link-icon" data-icon="bi:link" style="font-size: 30px;"></span>
+      <div class="Search_field_Icon_Container">
+        <input type="text" id="SearchInputField" placeholder="Search">
+      </div>
     </div>
     <div class="homepage_main_container">
       <div class="main-category">
