--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -170,14 +170,13 @@
       <img class="hero_Image" src="../img/Home_Genie_Hero_Image.png" alt="Hero_Image">
     </div>
     <div class="search-bar-container">
-
       <select name="categories" id="categories">
         <option value="personal-care-services">Personal Care Services</option>
         <option value="indoor-services">Indoor Services</option>
         <option value="outdoor-services">Outdoor Services</option>
         <option value="premium-services">Premium Services</option>
       </select>
-      <span class="iconify link-icon" data-icon="bi:link" style="font-size: 30px;"></span>
+      <span class="iconify link-icon searchlink" data-icon="bi:link" style="font-size: 30px;"></span>
       <div class="Search_field_Icon_Container">
         <input type="text" id="SearchInputField" placeholder="Search">
       </div>
