Some Style Changes

--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -52,7 +52,7 @@
                     </li>
                     <li>
                         <a href="#" class="ProfileIcon">
-                            <i title="Profile" class="far fa-user-circle"></i>
+                            <img src="../img/default_User.png" alt="Default User">
                         </a>
                         <div id="ProfileContainer">
                             <div class="subProfileMenu">
