Choose File btn color fix

--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -199,7 +199,11 @@
                                 <span class="img-title">Lorem</span>
                             </div>
                             <div class="button-div">
-                                <input type="file" id="myFile" name="myFile" accept="image/*" aria-hidden="false">
+                                <div class="chooseFileContainer">
+                                    Choose File
+                                    <input type="file" id="myFile" name="chooseFileBtn" class="fileOriginalBtn"
+                                        accept="image/*" aria-hidden="false">
+                                </div>
                                 <!-- <span aria-hidden="false">No file chosen</span> -->
                             </div>
 
