Added some style

--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -195,8 +195,8 @@
                     <div class="img-payment">
                         <div class="img-info">
                             <div class="img-clicked-info">
-                                <img id="UploadedImage" alt="random image">
-                                <span class="img-title">Lorem</span>
+                                <img id="UploadedImage" src="../img/DefaultImage.jpg" alt="random image">
+                                <span class="img-title"></span>
                             </div>
                             <div class="button-div">
                                 <div class="chooseFileContainer">
